--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
+html {
+  height: 100%;
+  font-family: "Montserrat";
+
+  --bg: #fcfcfc;
+  --bg-panel: #ebebeb;
+  --color-headings: #0077ff;
+  --color-text: #333333;
+}
+
 * {
   padding: 0;
   margin: 0;
-  color: white;
   border: none;
   outline: none;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-  background-color: #1a1a2e;
+  background-color: var(--bg);
 }
 
 .default-container {
@@ -17,8 +25,26 @@ body {
   max-width: 400px;
   min-width: 320px;
   padding: 2vh 2vw;
-  background-color: #0f3460;
+  background-color: var(--bg-panel);
   border-radius: 4px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  color: var(--color-headings);
+}
+
+.theme-switch-container {
+  display: flex;
+}
+
+.theme-switch-container span {
+  margin-right: 8px;
 }
 
 .content {
@@ -36,12 +62,11 @@ body {
   margin-left: 8px;
   flex-grow: 1;
   border-radius: 4px;
-  color: black;
   padding: 0 2px;
 }
 
 .result > span {
-  color: green;
+  color: var(--color-headings);
   font-size: 2rem;
   font-weight: bold;
 }
@@ -52,7 +77,7 @@ body {
 
 #submit-button {
   margin-top: 1vh;
-  background-color: #e94560;
+  background-color: var(--color-headings);
   font-weight: bold;
   font-size: 16px;
   border-radius: 4px;
@@ -60,7 +85,7 @@ body {
 }
 
 #submit-button:hover {
-  background-color: #b6364b;
+  background-color: var(--color-headings);
 }
 
 .information {
@@ -69,6 +94,7 @@ body {
 
 .information p {
   text-align: justify;
+  color: var(--color-text);
 }
 
 .information p:not(:first-child) {
@@ -76,7 +102,8 @@ body {
 }
 
 footer {
-  background-color: #16213e;
+  background-color: var(--color-headings);
+  color: var(--color-text);
   padding: 1% 0;
   display: flex;
   justify-content: center;
@@ -88,4 +115,51 @@ footer {
 
 .links {
   margin-left: 8px;
+}
+
+.links a {
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+input[type="checkbox"] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+#label-switch {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 28px;
+  height: 15px;
+  background: grey;
+  float: right;
+  border-radius: 100px;
+  position: relative;
+}
+
+label::after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background-color: var(--color-headings);
+}
+
+input:checked + label::after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 45px;
 }
